# Hand

handpose/: CMakeLists.txt  README.md  doxygen.config  handclass_config.h.in  refactoring.kdev4
handpose/apps/: CMakeLists.txt  chandtracker_gui.cpp  createFeatDB.cpp  createRenderDB.cpp  handTracker.cpp  hog_gui.cpp  nn_hogJointsParts.cpp
handpose/include/: approxNN.h  approxNNflann.h  approxNNlshkit.h  cDB.h  cDBelement.h  cDBregisterInsert.h  cDBregisterQuery.h  cPose.h  cPoseEstimator.h  cPoselistMulti.h  cTemporalFilter.h  cTestGUI2.h  chamfer.h  chandtracker.h  constants.h  createLSHindex.h  ctrackable.h  ctracker.h  distTransform.h  edge.h  exactNN.h  feature.h  handclass.h  hog.h  nn.h  processFeat.h  typeDefinitions.h  utils.h
handpose/scene/: CHandSkeleton.h  CMakeLists.txt  ccamslider.h  cjointslider.h  cposslider.h  csavebutton.cpp  csavebutton.h  handRenderer.cpp  handRenderer.h  hand_texture.ppm  loadPose.cpp  loadPose.h  renderPoses.cpp  renderhand.cc  testhand.cc
handpose/scene/poses/: adductedThumb.txt  adductionGrip.txt  extensionType.txt  fixedHook.txt  indexFingerExtension.txt  inferiorPincerGrasp.txt  largeDiameter.txt  lateral.txt  lateralTripod.txt  lightTool.txt  mediumWrap.txt  palmarGrasp.txt  palmarPinch.txt  parallelExtension.txt  powerDisk.txt  powerSphere.txt  precisionDisk.txt  precisionSphere.txt  prismatic2Finger.txt  prismatic3Finger.txt  prismatic4Finger.txt  quadpod.txt  ringGrasp.txt  smallDiameter.txt  sphere3Finger.txt  sphere4Finger.txt  stick.txt  tipPinch.txt  tripod.txt  ventralGrasp.txt  writingTripod.txt
handpose/src/: CMakeLists.txt  cDB.cpp  cDBelement.cpp  cPoselistMulti.cpp  cTemporalFilter.cpp  chandtracker.cpp  utils.cpp
handpose/tests/: CMakeLists.txt  ann_test.cpp  cDB_test.cpp  cPose_test.cpp  cPoselistMulti_test.cpp  chandtracker_test.cpp  compare_hogdb_hogim.cpp  hog_test.cpp
scene/: CHandSkeleton.h  CMakeLists.txt  ccamslider.h  cjointslider.h  cposslider.h  csavebutton.h  loadPose.h  renderhand.cc  testHandObject.cc  testhand.cc
scene/poses/: adductedThumb.txt  adductionGrip.txt  extensionType.txt  fixedHook.txt  indexFingerExtension.txt  inferiorPincerGrasp.txt  largeDiameter.txt  lateral.txt  lateralTripod.txt  lightTool.txt  mediumWrap.txt  palmarGrasp.txt  palmarPinch.txt  parallelExtension.txt  powerDisk.txt  powerSphere.txt  precisionDisk.txt  precisionSphere.txt  prismatic2Finger.txt  prismatic3Finger.txt  prismatic4Finger.txt  quadpod.txt  ringGrasp.txt  smallDiameter.txt  sphere3Finger.txt  sphere4Finger.txt  stick.txt  tipPinch.txt  tripod.txt  ventralGrasp.txt  writingTripod.txt
